# django-snakeoil

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: Makefile  conf.py  examples.rst  index.rst  make.bat  quickstart.rst  reference.rst  setup.rst  spelling_wordlist.txt  usage.rst
snakeoil/: __init__.py  admin.py  apps.py  jinja2.py  models.py  types.py  utils.py
snakeoil/jinja2/snakeoil/: seo.jinja2
snakeoil/migrations/: 0001_initial.py  0002_auto_20200727_0951.py
snakeoil/templatetags/: snakeoil.py
tests/: jinja2.py  models.py  settings.py  test_admin.py  test_jinja2.py  test_models.py  test_tags.py  test_template_tags.py  urls.py  views.py
tests/jinja2/: base.jinja2
tests/migrations/: 0001_initial.py
tests/templates/: base.html
tests/templates/tests/: article_detail.html  article_detail_without_obj.html
