[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ "name" = "Tom Carrick", "email" = "tom@carrick.eu" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = ["django"]
description = "Simple SEO & meta tag management for Django"
keywords = ["django", "seo", "meta"]
license = { "file" = "LICENSE" }
name = "django-snakeoil"
requires-python = ">=3.9"
readme = "README.rst"
version = "2.0"

[project.urls]
Documentation = "https://django-snakeoil.readthedocs.io/en/latest/"
Homepage = "https://github.com/knyghty/django-snakeoil"
Repository = "https://github.com/knyghty/django-snakeoil"

[tool.coverage.run]
branch = true
source = ["snakeoil"]

[tool.mypy]
files = ["snakeoil"]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
force-single-line = true
