[coverage:run]
branch = True
source = .
omit =
    runtests.py
    setup.py

[flake8]
ignore = B008, E501, W503
max-line-length = 80
select = B, B950, C, D, E, F, W

[isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
lines_after_imports = 2
multi_line_output = 3
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
use_parentheses = True

[metadata]
author = Tom Carrick
author_email = tom@carrick.eu
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP :: Site Management
description = Simple SEO & meta tag management for Django
keywords =
    django
    seo
    meta
long_description = file: README.rst
name = django-snakeoil
url = https://github.com/knyghty/django-snakeoil
version = 1.1

[options]
include_package_data = true
install_requires = django
packages = find:
