[coverage:run]
branch = True
source = .
omit =
    runtests.py
    setup.py

[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black

[metadata]
author = Tom Carrick
author_email = tom@carrick.eu
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP :: Site Management
description = Simple SEO & meta tag management for Django
keywords =
    django
    seo
    meta
long_description = file: README.rst
name = django-snakeoil
url = https://github.com/knyghty/django-snakeoil
version = 1.1.2

[options]
include_package_data = true
install_requires = django
packages = find:
